# sertif-ta

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  surat_tugas.json
.claude/: CHANGELOG.md
.github/workflows/: deploy.yml
app/: __init__.py  main.py
app/api/v1/: letters.py  router.py
app/api/v1/endpoints/: letters.py
app/core/: middleware.py
app/models/: __init__.py  letter.py
app/schemas/: letter.py
app/services/: __init__.py  cleanup.py  pdf_generator.py
app/templates/: base.html  surat_dinas.html  surat_edaran.html  surat_pemberitahuan.html
app/templates/components/: header.html  signature.html
app/templates/layouts/: base.html
app/templates/letters/: lembar_persetujuan.html  penilaian.html  surat_tugas.html
app/templates/letters/sertif/an/: kombinasi.html
app/templates/letters/sertif/av/: kombinasi.html
app/templates/letters/sertif/bc/: kombinasi.html
app/templates/letters/sertif/dkv/: kombinasi.html
app/templates/letters/sertif/ei/: kombinasi.html
app/templates/letters/sertif/mt/: kombinasi.html
app/templates/letters/sertif/rpl/: kombinasi.html
app/templates/letters/sertif/tkj/: kombinasi.html
app/utils/: __init__.py  date_parser.py  school_info.py
tests/api/v1/: test_letters.py
tests/models/: test_letter.py
tests/schemas/: test_letter.py
tests/services/: test_pdf_generator.py
tests/utils/: test_utils.py
