[project]
name = "fastapi-pdf-service"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "weasyprint>=67.0",
    "jinja2==3.1.6",
    "pydantic>=2.12.0",
    "python-multipart==0.0.20",
    "brotli-asgi>=1.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
    "pytest-asyncio==0.24.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["output*", "tests*", "venv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::PendingDeprecationWarning"
]
